Final touchups to v1

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ section {
     flex-flow: row wrap;
     justify-content: space-around;
     gap: 2em;
-    padding: 2em 0;
+    padding: 2em 0 0 0;
 }
 .testimonial {
     display: flex;
@@ -113,16 +113,11 @@ section {
 
 footer {
     margin: 0 1em;
-    line-height: 1.8rem;
+    line-height: 2rem;
 }
 footer h2 {
     margin-bottom: 0;
 }
 footer p {
     padding-top: 1rem;
-}
-footer a {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
 }
